kubernetes/apps/prod/nas/unraid/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: unraid
  namespace: nas
subsets:
  - addresses:
      - ip: ${UNRAID_IP}
    ports:
      - name: http
        port: 80
