kubernetes/apps/prod/nas/unraid/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: unraid
  namespace: nas
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
